--- a/frontend/src/components/NotebookList/NoteBookList.css
+++ b/frontend/src/components/NotebookList/NoteBookList.css
@@ -1,7 +1,8 @@
 .noteDiv{
     display: flex;
     margin: 40px;
-    width: 240px;
+    margin-left: 400px;
+    width: 700px;
     height: 196px;
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTddY8mxaGvWcVwZ08o7--hs0NbllYHUrUIXQ&usqp=CAU") ;
     background-repeat: no-repeat;
@@ -34,4 +35,8 @@
   .btnDel:hover{
     background:#2CC06B; 
   }
-  
+  .center{
+    margin-left: auto;
+    margin-right: auto;
+    width: 19em
+  }
